class Animal:

  def __init__(self, tipo, raca, idade, peso):
    self.tipo = tipo
    self.raca = raca
    self.idade = idade
    self.peso = peso