class Remedio:

  def __init__(self, remedio_id, tipo_remedio, descricao_remedio, quantidade_remedio):
    self.remedio_id = remedio_id
    self.tipo_remedio = tipo_remedio
    self.descricao_remedio = descricao_remedio
    self.quantidade_remedio = quantidade_remedio