class Vacina:

  def __init__(self, vacina_id, descricao_vacina, tipo_vacina, dose):
    self.vacina_id = vacina_id
    self.descricao_vacina = descricao_vacina
    self.tipo_vacina = tipo_vacina
    self.dose = dose