@startuml Diagrama de classes uml

title Clinica veterinaria

class Usuario {
    - login: String
    - senha: String
    - email: String
    + construtor(login, senha, email)
    + novo_usuario(): void
    + altera_senha(): void
    + recupera_senha(): void
}

class Cliente {
    + nome: String
    - cpf: String
    + endereco: String
    + telefone: String
    + usuario: Usuario
    + construtor(nome, cpf, endereco, telefone, usuario)
    + novo_cliente(): void
}

class Animal {
    + tipo: String
    + raça: String
    + idade: Int
    + peso: Double
    + construtor(tipo, raça, idade, peso)
}

class Paciente {
    + nome_pet: String
    + descricao_pet: String
    + cliente: Cliente
    + animal: Animal
    + construtor(nome_pet, descricao_pet, cliente, animal)
    + registra_pet(): void
    + consulta_pet(): void
}

class Vacina {
    + vacina_id: Int
    + descricao_vacina: String
    + tipo_vacina: String
    + dose: Double
    + construtor(vacina_id, descricao_vacina, tipo_vacina, dose)
}

class Remedio {
    + remedio_id: Int
    + tipo_remedio: String
    + descricao_remedio: String
    + quantidade_remedio: Int
    + construtor(remedio_id, tipo_remedio, descricao_remedio, quantidade_remedio)
}

class Tratamento {
    + tipo: String
    + duracao: String
    + paciente: Paciente
    + vacina: Vacina
    + remedio: Remedio
    + construtor(tipo, duracao, paciente, vacina, remedio)
    + agenda_tratamento(): void
    + examina_paciente(): void
}

class Funcionario {
    + matricula: Int
    + nome_profissional: String
    + especialidade: String
    + tratamento: Tratamento
    + construtor(matricula, nome_profissional, especialidade, tratamento)
    + registra_funcionario(): void
    + consulta_funcionario(): void
}

class Pagamento {
    + quantidade_total: Int
    + valor_total: Double
    + metodo_pagamento: String
    + tratamento: Tratamento
    + construtor(quantidade_total, valor_total, metodo_pagamento, tratamento)
    + finaliza_pagamento(): void
    + valida_promocao(): void
}

Usuario <|-- Cliente
Cliente <|-- Paciente
Paciente --|> Animal
Tratamento *-- Paciente
Tratamento *-- Funcionario
Tratamento o-- Vacina
Tratamento o-- Remedio
Pagamento <|-- Tratamento



@enduml